<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="@dimen/dimen_150"
        android:layout_height="@dimen/dimen_150"
        android:layout_marginTop="@dimen/dimen_3"
        android:layout_marginStart="@dimen/dimen_3"
        android:background="@color/colorFrenchGray"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:maxLines="2"
        android:text="@string/ex_overview"
        android:textColor="@color/colorSteelGray"
        android:textSize="@dimen/font_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPoster"
        app:layout_constraintTop_toTopOf="@id/ivPoster" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_3"
        android:maxLines="1"
        android:textColor="@color/colorDoveGray"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="12 Agustus 2020" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_7"
        android:maxLines="3"
        android:textColor="@color/colorSteelGray"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
        tools:text="@string/ex_review_content" />

</androidx.constraintlayout.widget.ConstraintLayout>