<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".feature.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16">

            <TextView
                android:id="@+id/tvAppBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvLabelPopularMovie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/popular_movie"
                    android:textColor="@color/colorSteelGray"
                    android:textSize="@dimen/font_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularMovie"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelPopularMovie"
                    tools:itemCount="3"
                    tools:listitem="@layout/row_item_popular_movie" />

                <include
                    android:id="@+id/loadingPopularMovie"
                    layout="@layout/base_loading_banner"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelPopularMovie" />

                <TextView
                    android:id="@+id/tvLabelTopRated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/top_rated"
                    android:textColor="@color/colorSteelGray"
                    android:textSize="@dimen/font_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                    app:layout_constraintTop_toBottomOf="@id/rvPopularMovie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRatedMovie"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelTopRated"
                    tools:itemCount="3"
                    tools:listitem="@layout/row_item_movie_with_title" />

                <include
                    android:id="@+id/loadingTopRatedMovie"
                    layout="@layout/base_loading_list_with_title"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelTopRated" />

                <TextView
                    android:id="@+id/tvLabelNowPlaying"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/now_playing"
                    android:textColor="@color/colorSteelGray"
                    android:textSize="@dimen/font_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guidelineLeft"
                    app:layout_constraintTop_toBottomOf="@id/rvTopRatedMovie" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvNowPlayingMovie"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelNowPlaying"
                    app:layout_constraintVertical_bias="0"
                    tools:itemCount="3"
                    tools:listitem="@layout/row_item_movie_with_title" />

                <include
                    android:id="@+id/loadingNowPlayingMovie"
                    layout="@layout/base_loading_list_with_title"
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelNowPlaying" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dimen_16" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dimen_16" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>